k3s/monitoring/grafana/ingressRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: pihole
  annotations:
    spec.ingressClassName: "traefik"
spec:
  rules:
  - host: grafana.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
